# argchain

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
argchain/: __init__.py  decorators.py  pipeline.py
docs/: CHEATSHEET.md  FRAMEWORK.md  INDEX.md  QUICKSTART.md  README.md  STATUS.md  SUMMARY.md
examples/: __init__.py  callgraph_demo.py  examples.py  metadata_demo.py
tests/: __init__.py  tests.py  verify.py
